add a seen msg component